change Contact view

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -23,6 +23,8 @@
     "SEND_BTN_ONE": "Füllen Sie alle Felder aus",
     "SEND_BTN_TWO": "SENDEN",
 
+    "PHONE": "Telefon",
+
     "IMPRINT": "Impressum",
     "DATA_PROTEC": "Datenschutz"
   }
