--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,6 +23,8 @@
   "SEND_BTN_ONE": "Fill all Fields",
   "SEND_BTN_TWO": "SEND",
 
+  "PHONE": "Phone",
+
   "IMPRINT": "Imprint",
     "DATA_PROTEC": "Data protection"
 }
